--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-telegram-app",
-  "homepage": "https://github.com/EmelyanIvan/test-tg-app.git",
+  "homepage": "https://emelyanivan.github.io/test-tg-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
